[package]
name = "todo-rs"
version = "0.1.0"
authors = ["Joshua Marsh (icub3d) <joshua@themarshians.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "1.2.2"
dinglebit-config = "0.2.3"
futures = "0.3.14"
mongodb = { version = "2.0.0-alpha.1", default-features = false, features = ["async-std-runtime"] }
prost = "0.7.0"
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.4.2"

[build-dependencies]
prost-build = "0.7.0"
tonic-build = "0.4.2"
serde = { version = "1.0.125", features = ["derive"] }
